# ---- Module directories ----

add_subdirectory(Benchmark)
add_subdirectory(CPV)
add_subdirectory(CTP)
add_subdirectory(Common)
add_subdirectory(Daq)
add_subdirectory(EMCAL)
add_subdirectory(Example)
add_subdirectory(FIT)
add_subdirectory(FOCAL)
add_subdirectory(GLO)
add_subdirectory(HMPID)
add_subdirectory(ITS)
add_subdirectory(Kafka)
add_subdirectory(MFT)
add_subdirectory(MUON)
add_subdirectory(PHOS)
add_subdirectory(PID)
add_subdirectory(Skeleton)
add_subdirectory(TOF)
add_subdirectory(TPC)
add_subdirectory(TRD)
add_subdirectory(ZDC)
